[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/fray/assets/icons/remove.svg" type="Texture" id=1]
[ext_resource path="res://addons/fray/editor/ui/reordable_list/list_item.gd" type="Script" id=2]
[ext_resource path="res://addons/fray/assets/icons/triple_bar.svg" type="Texture" id=3]

[node name="ListItem" type="HBoxContainer"]
margin_right = 1010.0
margin_bottom = 22.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 88.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Grabber" type="Button" parent="HBoxContainer"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 3 )

[node name="OrderLabel" type="Label" parent="HBoxContainer"]
margin_left = 32.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 18.0
text = "0"

[node name="ContentContainer" type="MarginContainer" parent="."]
margin_left = 92.0
margin_right = 977.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="RemovalButton" type="Button" parent="."]
margin_left = 981.0
margin_right = 1009.0
margin_bottom = 22.0
icon = ExtResource( 1 )

[connection signal="button_down" from="HBoxContainer/Grabber" to="." method="_on_Grabber_button_down"]
[connection signal="button_up" from="HBoxContainer/Grabber" to="." method="_on_Grabber_button_up"]
[connection signal="pressed" from="RemovalButton" to="." method="_on_RemovalButton_pressed"]
